side-bar + section top(upgrade)

--- a/index.html
+++ b/index.html
@@ -20,13 +20,55 @@
       <!-- SIDE-BAR -->
       <div class="side-bar">
 
+        <div class="logo">
+          <img src="img/logo.svg" alt="logo">
+        </div>
+
+        <div class="side-menu">
+          <ul>
+            <li><a class="active" href="#"><img src="img/home.svg" alt="home">Home</a></li>
+            <li><a href="#"><img src="img/search.svg" alt="search">Cerca</a></li>
+            <li><a href="#"><img src="img/libreria.svg" alt="libreria">La tua libreria</a></li>
+          </ul>
+        </div>
+
+        <div class="playlists">
+          <h3>Playlist</h3>
+          <ul>
+            <li><a href="#"><div class="add">+</div> Crea playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+            <li><a href="#">Nome playlist</a></li>
+          </ul>
+        </div>
+
+
       </div>
       <!-- /SIDE-BAR -->
 
       <!-- INSIDE -->
       <div class="main-inside">
-        <div class="upgrade"></div>
-        <div class="debug-content"></div>
+
+        <div class="upgrade">
+          <a id="upg" href="#">effettua l'upgrade</a>
+        </div>
+        <nav>
+          <ul>
+            <li><a class="active" href="#">In evidenza</a></li>
+            <li><a href="#">Podcast</a></li>
+            <li><a href="#">Classifiche</a></li>
+            <li><a href="#">Generi e mood</a></li>
+            <li><a href="#">Nuove uscite</a></li>
+            <li><a href="#">Scopri</a></li>
+          </ul>
+        </nav>
+        <div class="debug-content">
+
+        </div>
       </div>
       <!-- /INSIDE -->
     </main>
@@ -34,6 +76,16 @@
 
     <!-- FOOTER -->
     <footer>
+      
+      <div class="info-song">
+
+      </div>
+      <div class="player">
+
+      </div>
+      <div class="volume">
+
+      </div>
 
     </footer>
     <!-- /FOOTER -->
