prima parte footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="img/favicon.ico"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -15,46 +17,63 @@
   <div class="wrapper">
 
     <!-- MAIN -->
-    <main class="clearfix">
+    <main>
 
       <!-- SIDE-BAR -->
       <div class="side-bar">
 
-        <div class="logo">
-          <img src="img/logo.svg" alt="logo">
-        </div>
+        <!-- SIDE-TOP -->
+        <div class="side-bar-top">
+          <div class="logo">
+            <img src="img/logo.svg" alt="logo">
+          </div>
 
-        <div class="side-menu">
-          <ul>
-            <li><a class="active" href="#"><img src="img/home.svg" alt="home">Home</a></li>
-            <li><a href="#"><img src="img/search.svg" alt="search">Cerca</a></li>
-            <li><a href="#"><img src="img/libreria.svg" alt="libreria">La tua libreria</a></li>
-          </ul>
-        </div>
+          <div class="side-menu">
+            <ul>
+              <li><a class="active" href="#"><img src="img/home.svg" alt="Home">Home</a></li>
+              <li><a href="#"><img src="img/search.svg" alt="search">Cerca</a></li>
+              <li><a href="#"><img src="img/libreria.svg" alt="libreria">La tua libreria</a></li>
+            </ul>
+          </div>
 
-        <div class="playlists">
-          <h3>Playlist</h3>
-          <ul>
-            <li><a href="#"><div class="add">+</div> Crea playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-            <li><a href="#">Nome playlist</a></li>
-          </ul>
+          <div class="playlists">
+            <h3>Playlist</h3>
+            <ul>
+              <li><a class="add" href="#">Crea playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+              <li><a href="#">Nome playlist</a></li>
+            </ul>
+          </div>
         </div>
+        <!-- /SIDE-TOP -->
+
+        <!-- SIDE-BOTTOM-PROFILE -->
+        <div class="side-bar-bottom">
+          <div class="install">
+            <img src="img/download.svg" alt="download">
+            <a href="#">Installa app</a>
+          </div>
+          <div class="profile">
+            <img src="img/profile.svg" alt="profile">
+            <a href="#">John Doe</a>
+          </div>
+        </div>
+        <!-- /SIDE-BOTTOM-PROFILE -->
 
 
       </div>
       <!-- /SIDE-BAR -->
 
       <!-- INSIDE -->
-      <div class="main-inside">
+      <section class="main-inside">
 
-        <div class="upgrade">
-          <a id="upg" href="#">effettua l'upgrade</a>
+        <div class="call-to-action">
+          <a id="upgrade" href="#">effettua l'upgrade</a>
         </div>
         <nav>
           <ul>
@@ -67,9 +86,10 @@
           </ul>
         </nav>
         <div class="debug-content">
-
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quod officiis ipsa et fugit doloremque quis eius voluptatum excepturi similique? Sint at suscipit voluptatibus aliquid quasi? Aut, commodi a minima quae enim, magni maiores ratione eaque optio deleniti id ex iure quo? Maxime ratione eius et doloribus minus dignissimos, tenetur ipsam nostrum? Blanditiis, illum voluptates. Inventore, ex nulla aspernatur in fugiat rerum recusandae doloribus aut hic, odit numquam pariatur laboriosam aliquid nemo voluptatibus excepturi rem ratione fuga enim temporibus. Nemo sit eius obcaecati doloribus tempora assumenda ad ut odit culpa aliquid magnam aliquam molestiae, porro repellat at veritatis eveniet libero vel voluptatem nisi inventore quas minus? Atque nesciunt fuga maiores quis, tenetur doloribus nulla laudantium amet earum officiis iusto autem alias blanditiis aut excepturi dolores id doloremque fugiat, numquam voluptates unde sunt nisi? Est a quo ipsum accusantium explicabo rem. Consectetur tenetur repudiandae ea laudantium blanditiis aperiam ducimus et molestias doloremque voluptatibus error dicta dolor nisi vel molestiae ipsum quam nostrum, deleniti earum reprehenderit fugit perspiciatis optio! Nulla, recusandae itaque suscipit in dolorum temporibus qui. Aut fugit voluptas obcaecati, odit incidunt natus quia consequatur? Nisi provident aut eaque voluptatibus animi expedita vero, amet temporibus minus saepe odit impedit commodi id repudiandae excepturi nam. Distinctio facere nulla unde enim dolore? Quae laborum blanditiis alias quidem, veritatis exercitationem quo, debitis tempore molestiae deserunt dolores. Consequuntur labore harum dolorem sequi consequatur unde facere repellat aperiam dolore quaerat, velit culpa perspiciatis in, soluta impedit eius architecto. Tempore voluptatibus illum, quos eum velit laborum maxime provident itaque possimus facilis ab delectus omnis esse reprehenderit architecto perferendis exercitationem nobis eaque, illo at nam saepe ipsa cum ea? Debitis dignissimos porro, corporis eius laboriosam veniam ullam rem sit architecto nulla incidunt ducimus at quae, id quas? Perspiciatis nulla nisi explicabo beatae debitis, fuga ad facere maiores ab totam libero impedit minus provident doloremque quo voluptatum labore quisquam porro accusantium quos fugit, asperiores tempora natus! Deserunt totam, minus illo maxime sapiente accusantium voluptatum ad praesentium itaque. Voluptates, voluptatum? Facere id vel incidunt hic quo sunt pariatur. Totam, ratione. Tenetur minima sit doloremque omnis soluta reiciendis eaque aperiam, hic nostrum repudiandae asperiores, architecto vel illo deleniti veritatis corrupti ea voluptas alias non totam rem dolores esse commodi eveniet? Dolorum quisquam eos eveniet delectus iste recusandae, doloribus tenetur commodi suscipit? Enim, natus officiis. Aspernatur placeat repellat quod vel consequuntur. Inventore rem, perspiciatis harum expedita neque sed? Fugit quos esse reprehenderit ex quod libero, dignissimos ipsum, ipsa quia aut et corrupti reiciendis mollitia officia est assumenda facere debitis sunt excepturi suscipit. Et eveniet excepturi laborum voluptate doloremque ex, quos beatae hic labore eligendi in quis quo sint, ratione fuga, vero numquam distinctio repellat? Repellat consectetur necessitatibus blanditiis nostrum fugit explicabo sint ad! Error harum qui dolores quisquam itaque sit velit voluptatibus. Esse magni, expedita reiciendis architecto natus est obcaecati quaerat? Totam cum beatae modi ab reiciendis? Aliquam dignissimos quo laborum alias labore voluptate velit, cumque dolorum, molestias distinctio saepe quibusdam nobis veniam. Iusto dolor eius sed deleniti nam, rem, fugiat laborum repudiandae placeat, incidunt error explicabo iste! Aliquam itaque sit nostrum deserunt iste a laudantium corporis quod repudiandae ducimus dolorem vero, numquam eum ratione nulla delectus minima officia veritatis? Suscipit quaerat voluptatum tempora ad. Labore esse, eveniet maxime minima voluptatem nisi sunt inventore ea dolore? Fugiat beatae rem adipisci officiis eaque ea labore culpa repellat repudiandae, nobis at ex cumque doloremque itaque voluptatum! Dolorum veniam ducimus veritatis. Repudiandae est consequuntur deserunt optio nihil aperiam hic, quisquam natus, vero expedita sapiente voluptates ratione. Iusto cum voluptates minima nemo vero. At, explicabo mollitia? Deleniti pariatur modi quam expedita magnam minima labore aliquam impedit voluptatibus vitae facere beatae libero enim aliquid, sed nam quisquam quis. Placeat accusamus ut quos dolore animi ad doloribus corporis beatae magni iste cupiditate unde, ratione reiciendis hic. Aliquid voluptates debitis nulla, sed aspernatur, rerum quis magnam quam laudantium, ipsum accusantium error dolores neque iure voluptatem vel at? Illo odit necessitatibus officia at in error quam vero, excepturi fugiat eum cupiditate corrupti magnam dicta expedita. Nisi eligendi, labore totam voluptate tempora at deleniti ratione laboriosam corrupti a assumenda expedita. Neque culpa suscipit deserunt id vitae nihil adipisci error dicta labore fugiat quasi dignissimos, molestias sapiente ipsum repellat dolores quam, ex magni. A in natus, debitis dignissimos dolor fuga numquam ullam sit maxime omnis, labore adipisci aspernatur quam voluptas! Nam repudiandae error earum veritatis delectus iste quia iure. Id ab exercitationem enim sit voluptates ullam tempora quae est sequi veritatis, ducimus repellendus eos officiis commodi alias iure porro dolor rerum perferendis corrupti! Deserunt quaerat quis dignissimos ea libero ut at, veritatis ratione excepturi hic. Laboriosam possimus fuga, sapiente temporibus eligendi ipsum minima voluptatem at tempore id quo! Velit inventore modi rerum. Similique minima architecto fuga laudantium corrupti delectus, non reiciendis quam dignissimos, consequuntur minus illum animi totam odio porro iure? Ducimus placeat beatae voluptates perferendis a soluta aliquid possimus quo, sed incidunt sit, excepturi magni dolorum molestias aut, perspiciatis repellat minima iste laborum veritatis temporibus rerum! Nesciunt repudiandae commodi assumenda doloremque magnam temporibus quibusdam molestias debitis, distinctio, maiores possimus obcaecati ipsam consectetur voluptate. Dolorem, nobis cupiditate. Numquam, ex. Quos illum rerum tenetur ducimus? Molestiae nisi odio eius! Ab fugit, consectetur quos corrupti odio nemo sequi, veritatis esse provident earum magni et sunt ut illo cumque perspiciatis itaque harum laborum consequatur quasi! Nulla eos debitis provident tempore enim sint et optio cumque accusamus error sequi, perferendis aliquid voluptatem recusandae neque. Sapiente delectus culpa perspiciatis accusamus harum asperiores est voluptas quia ut, distinctio, repellat illum explicabo. Fugit quam laboriosam nemo qui veritatis, iure repudiandae aut, id ipsa pariatur beatae accusantium rem temporibus cupiditate eius quia labore in recusandae autem nam perferendis? Totam explicabo libero eum. Libero recusandae totam vel sint corrupti ratione. Asperiores repellat a quas. Provident perferendis laudantium saepe fugit ut asperiores, ullam dicta reprehenderit sit eum eos, culpa nam. Tempore a quasi officia, quibusdam perspiciatis provident doloremque consequuntur voluptate, dolores natus vitae! Cupiditate porro officiis adipisci nam dolores sequi consectetur nihil repellat iure ea doloremque dignissimos enim deserunt repudiandae, pariatur quos.
         </div>
-      </div>
+
+      </section>
       <!-- /INSIDE -->
     </main>
     <!-- /MAIN -->
@@ -77,14 +97,22 @@
     <!-- FOOTER -->
     <footer>
       
-      <div class="info-song">
-
-      </div>
       <div class="player">
-
-      </div>
-      <div class="volume">
-
+        <div class="player-song">
+          <div class="song-img">
+            <img src="img/sinister.jpeg" alt="sinister">
+          </div>
+          <div class="info-song">
+            <h4>Sinister</h4>
+            <p>Brano Nome</p>
+          </div>
+          <div class="song-commands">
+            <i class="far fa-heart"></i>
+            <i class="far fa-folder"></i>
+          </div>
+        </div>
+        <div class="player-control"></div>
+        <div class="player-audio"></div>
       </div>
 
     </footer>
