side-bar aggiustata

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- SIDE-TOP -->
         <div class="side-bar-top">
-          <div class="logo">
+          <div class="logo-img">
             <img src="img/logo.svg" alt="logo">
           </div>
 
@@ -36,17 +36,17 @@
             </ul>
           </div>
 
-          <div class="playlists">
+          <div class="side-playlists">
             <h3>Playlist</h3>
             <ul>
-              <li><a class="add" href="#">Crea playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
-              <li><a href="#">Nome playlist</a></li>
+              <li><a class="add" href="#">Crea Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
             </ul>
           </div>
         </div>
@@ -60,7 +60,7 @@
           </div>
           <div class="profile">
             <img src="img/profile.svg" alt="profile">
-            <a href="#">John Doe</a>
+            <h5>John Doe</h5>
           </div>
         </div>
         <!-- /SIDE-BOTTOM-PROFILE -->
