--- a/index.html
+++ b/index.html
@@ -97,23 +97,51 @@
     <!-- FOOTER -->
     <footer>
       
-      <div class="player">
-        <div class="player-song">
+      <div class="player">  <!-- player-footer-cont -->
+        <div class="player-song">  <!-- player-song -->
           <div class="song-img">
             <img src="img/sinister.jpeg" alt="sinister">
           </div>
           <div class="info-song">
             <h4>Sinister</h4>
-            <p>Brano Nome</p>
+            <a href="#">Brano Nome</a>
           </div>
           <div class="song-commands">
             <i class="far fa-heart"></i>
             <i class="far fa-folder"></i>
           </div>
-        </div>
-        <div class="player-control"></div>
-        <div class="player-audio"></div>
-      </div>
+        </div>  <!-- /player-song -->
+
+        <div class="player-control">  <!-- player-control -->
+          <div class="control-commands">
+            <i class="fas fa-random"></i>
+            <i class="fas fa-step-backward"></i>
+            <i class="far fa-play-circle"></i>
+            <i class="fas fa-step-forward"></i>
+            <i class="fas fa-redo-alt"></i>
+          </div> 
+          <div class="time">
+            <span>0:25</span>
+            <div class="player-bar">
+              <div class="progress">
+                <div class="point"></div>
+              </div>
+            </div> 
+            <span>4:35</span>
+          </div> 
+        </div>  <!-- /player-control -->
+
+        <div class="player-audio">  <!-- player-audio -->
+          <i class="fas fa-list-ul"></i>
+          <i class="fas fa-tv"></i>
+          <i class="fas fa-volume-up"></i>
+          <div class="audio-bar">
+            <div class="progress">
+              <div class="point"></div>
+            </div>
+          </div> 
+        </div>  <!-- /player-audio -->
+      </div>  <!-- /player-footer-cont -->
 
     </footer>
     <!-- /FOOTER -->
