aggiunta opacity  - menu laterale

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="side-menu-small">
             <ul>
-              <li><a href="#"><img src="img/home.svg" alt="home"></a></li>
+              <li><a class="active" href="#"><img src="img/home.svg" alt="home"></a></li>
               <li><a href="#"><img src="img/search.svg" alt="search"></a></li>
               <li><a href="#"><img src="img/libreria.svg" alt="libreria"></a></li>
             </ul>
